<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authenticate.SetUpProfileFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/profile_info_string"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_instructions_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/profile_info_instructions"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_text_view" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/margin_64dp"
        android:src="@drawable/ic_profile_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_instructions_text_view"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:hint="@string/name_edit_text_hint_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_view"
        app:layout_constraintWidth_percent="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/complete_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_edit_text"
        app:layout_constraintVertical_bias="0.89" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/complete_profile_button"
        app:layout_constraintEnd_toEndOf="@id/complete_profile_button"
        app:layout_constraintStart_toStartOf="@id/complete_profile_button"
        app:layout_constraintTop_toTopOf="@id/complete_profile_button" />

</androidx.constraintlayout.widget.ConstraintLayout>