<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authenticate.LogInFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/enter_phone_and_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/enter_your_phone_number_and_password_string"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/verify_number_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/whatsapp_will_need_to_verify_your_phone_number_string"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_and_password_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/choose_country_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:drawableEnd="@drawable/ic_expand"
        android:editable="false"
        android:gravity="center"
        android:text="Nigeria"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_number_message_text_view"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/country_code_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:drawableStart="@drawable/ic_plus_sign"
        android:drawablePadding="@dimen/margin_8dp"
        android:editable="false"
        android:text="234"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_country_edit_text"
         />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enter_phone_number_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:hint="@string/phone_number_string"
        android:inputType="number"
        app:layout_constraintWidth_percent="0.5"
        android:maxLength="11"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/country_code_edit_text"
        app:layout_constraintTop_toBottomOf="@id/choose_country_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/otp_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center"
        android:hint="@string/otp_hint_text"
        android:inputType="number"
        android:maxLength="4"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/enter_phone_number_edit_text"
        app:layout_constraintStart_toStartOf="@id/enter_phone_number_edit_text"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_number_edit_text"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_otp_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/send_otp_string"
        app:layout_constraintBottom_toBottomOf="@id/enter_phone_number_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/enter_phone_number_edit_text"
        app:layout_constraintTop_toTopOf="@id/enter_phone_number_edit_text" />

    <ProgressBar
        android:id="@+id/otp_progress_bar"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/send_otp_button"
        app:layout_constraintEnd_toEndOf="@id/send_otp_button"
        app:layout_constraintStart_toStartOf="@id/send_otp_button"
        app:layout_constraintTop_toTopOf="@id/send_otp_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_edit_text"
        app:layout_constraintVertical_bias="0.89" />

    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="@id/sign_in_button"
        app:layout_constraintTop_toTopOf="@id/sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>