<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authenticate.LogInOrSignUpFragment">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/enter_phone_and_password_edit_text"
        android:text="@string/enter_your_phone_number_and_password_string"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_16dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_and_password_edit_text"
        android:text="@string/whatsapp_will_need_to_verify_your_phone_number_string"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:id="@+id/verify_number_message_text_view"/>

   <com.google.android.material.textfield.TextInputEditText
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       android:drawableEnd="@drawable/ic_expand"
       android:text="Nigeria"
       android:gravity="center"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/verify_number_message_text_view"
       android:layout_marginTop="@dimen/margin_8dp"
       app:backgroundTint="@color/colorPrimary"
       app:layout_constraintWidth_percent="0.7"
       android:id="@+id/choose_country_edit_text"
       android:editable="false"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/choose_country_edit_text"
        app:layout_constraintTop_toBottomOf="@id/choose_country_edit_text"
        android:layout_marginTop="@dimen/margin_16dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintWidth_percent="0.19"
        android:drawableStart="@drawable/ic_plus_sign"
        android:id="@+id/country_code_edit_text"
        android:text="234"
        android:drawablePadding="@dimen/margin_8dp"
        android:editable="false"/>
    
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/country_code_edit_text"
        app:layout_constraintEnd_toEndOf="@id/choose_country_edit_text"
        app:layout_constraintTop_toBottomOf="@id/choose_country_edit_text"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:hint="@string/phone_number_string"
        android:inputType="number"
        app:backgroundTint="@color/colorPrimary"
        android:id="@+id/enter_phone_number_edit_text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/country_code_edit_text"
        app:layout_constraintEnd_toEndOf="@id/enter_phone_number_edit_text"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_number_edit_text"
        android:layout_marginTop="@dimen/margin_16dp"
        android:inputType="textPassword"
        android:id="@+id/password_edit_text"
        app:backgroundTint="@color/colorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintVertical_bias="0.89" />



</androidx.constraintlayout.widget.ConstraintLayout>